--- a/style.css
+++ b/style.css
@@ -80,6 +80,17 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: inherit;
 }
 
+:root {
+  --gap: 24px;
+  --gap4: 4px;
+  --white_1: #ffffff;
+  --blockBack: #f6f8fb;
+  --gray_1: #b3bcc5;
+  --gray_2: #e0e6ef;
+  --blue_1: #005bff;
+  --raspberry: #f81155;
+}
+
 body {
   color: #001a34;
   font-family: "GTEestiPro", sans-serif;
@@ -139,7 +150,7 @@ body {
 }
 
 html, body {
-  background: rgb(246, 248, 251);
+  background: var(--blockBack);
 }
 
 body {
@@ -164,6 +175,12 @@ body {
   width: 8px;
   height: 8px;
 }
+@media (max-width: 425px) {
+  ::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+  }
+}
 
 ::-webkit-scrollbar-track,
 ::-webkit-scrollbar-corner {
@@ -180,25 +197,10 @@ body {
   background-color: rgba(242, 228, 211, 0.4);
 }
 
-@media (max-width: 425px) {
-  ::-webkit-scrollbar {
-    width: 0;
-    height: 0;
-  }
-}
 .content {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
-}
-
-:root {
-  --gap: 24px;
-  --gap4: 4px;
-  --white_1: #ffffff;
-  --gray_1: #b3bcc5;
-  --blue_1: #005bff;
-  --raspberry: #f81155;
 }
 
 .row {
@@ -316,17 +318,25 @@ button {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
-  width: 100%;
   height: 16px;
+  width: 100%;
+  border: none;
   border-radius: 20px;
   cursor: pointer;
+  --range: calc(var(--max) - var(--min));
+  --ratio: calc((var(--value) - var(--min)) / var(--range));
+  --sx: calc(0.5 * 2em + var(--ratio) * (100% - 2em));
 }
 [type=range]:focus {
   outline: none;
 }
 [type=range]::-webkit-slider-runnable-track {
   height: 16px;
-  width: 100%;
+  background: -webkit-gradient(linear, left top, left bottom, from(var(--blue_1)), to(var(--blue_1))) 0/var(--sx) 100% no-repeat, var(--gray_2);
+  background: linear-gradient(var(--blue_1), var(--blue_1)) 0/var(--sx) 100% no-repeat, var(--gray_2);
+  border-radius: 20px;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 [type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
@@ -336,7 +346,7 @@ button {
   margin-top: -5px;
   background: var(--raspberry);
   border: 4px solid var(--white_1);
-  border-radius: 20px;
+  border-radius: 50%;
   -webkit-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
           box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
   cursor: move;
@@ -364,7 +374,7 @@ button {
   height: 16px;
   width: 16px;
   background-color: var(--white_1);
-  border: 2px solid rgba(204, 214, 228, 0.6);
+  border: 2px solid var(--gray_2);
   border-radius: 50%;
 }
 
