--- a/style.css
+++ b/style.css
@@ -81,8 +81,22 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 :root {
-  --gap: 24px;
-  --gap4: 4px;
+  --gap-small: 4px;
+  --gap-xsmall: 8px;
+  --gap-xxsmall: 16px;
+  --gap-large: 24px;
+  --gap-xlarge: 28px;
+  --gap-xxlarge: 32px;
+  --size_h: 48px;
+  --size_h2: 16px;
+  --size_h3: 8px;
+  --size_w: 1336px;
+  --size_w2: calc(var(--size_w) / 2);
+  --size_w3: calc(var(--size_w) / 3);
+  --size_w4: calc(var(--size_w) / 4);
+  --size_w5: calc(var(--size_w) / 5);
+  --size_w6: calc(var(--size_w) / 6);
+  --size_w12: calc(var(--size_w) / 12);
   --white_1: #ffffff;
   --blockBack: #f6f8fb;
   --gray_1: #b3bcc5;
@@ -207,27 +221,32 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 6px;
+  gap: var(--gap-xsmall);
+}
+
+[type=text], [type=tel], [type=password], [type=email], [type=number], form select {
+  border: 2px solid var(--gray_1);
+  border-radius: 4px;
 }
 
 main {
   max-width: 1440px;
   margin: 0 auto;
-  padding: 0 calc(var(--gap) + var(--gap4));
+  padding: 0 var(--gap-xlarge);
 }
 main > article {
-  margin: calc(var(--gap) + var(--gap4) * 2) 0 0;
-  padding: var(--gap);
+  margin: var(--gap-xxlarge) 0 0;
+  padding: var(--gap-large);
   background: var(--white_1);
   border-radius: 4px;
 }
 @media (max-width: 425px) {
   main {
-    padding: 0 calc((var(--gap) + var(--gap4)) / 2);
+    padding: 0 calc(var(--gap-xlarge) / 2);
   }
   main > article {
-    margin: calc((var(--gap) + var(--gap4) * 2) / 2) 0 0;
-    padding: calc(var(--gap) / 2);
+    margin: calc(var(--gap-xxlarge) / 2) 0 0;
+    padding: calc(var(--gap-large) / 2);
   }
 }
 
@@ -236,31 +255,29 @@ h2 {
   font-weight: 700;
   line-height: 36px;
   letter-spacing: 0.4px;
-  margin: 0 0 calc(var(--gap) + 4px);
+  margin: 0 0 var(--gap-xlarge);
 }
 
 form {
-  max-width: 420px;
+  max-width: var(--size_w3);
 }
 form li {
-  margin: calc(var(--gap) / 2) 0 0;
+  margin: var(--gap-xxsmall) 0 0;
 }
 form li:last-child {
-  margin: var(--gap) 0 0;
+  margin: var(--gap-large) 0 0;
 }
 form select {
-  height: 60px;
+  height: var(--size_h);
   text-align: center;
   font-size: 20px;
   line-height: 24px;
   letter-spacing: 0.4px;
-  border: 2px solid var(--gray_1);
-  border-radius: 4px;
 }
 
 button {
-  width: 210px;
-  height: 60px;
+  width: var(--size_w6);
+  height: var(--size_h);
   background: var(--blue_1);
   border-radius: 2px;
   color: var(--white_1);
@@ -272,9 +289,7 @@ button {
 [type=text], [type=tel], [type=password], [type=email], [type=number] {
   padding: 0 18px 0;
   width: 100%;
-  height: 60px;
-  border: 2px solid var(--gray_1);
-  border-radius: 4px;
+  height: var(--size_h);
   font-size: 20px;
   line-height: 24px;
   letter-spacing: 0.4px;
@@ -318,7 +333,7 @@ button {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
-  height: 16px;
+  height: var(--size_h2);
   width: 100%;
   border: none;
   border-radius: 20px;
@@ -331,7 +346,7 @@ button {
   outline: none;
 }
 [type=range]::-webkit-slider-runnable-track {
-  height: 16px;
+  height: var(--size_h2);
   background: -webkit-gradient(linear, left top, left bottom, from(var(--blue_1)), to(var(--blue_1))) 0/var(--sx) 100% no-repeat, var(--gray_2);
   background: linear-gradient(var(--blue_1), var(--blue_1)) 0/var(--sx) 100% no-repeat, var(--gray_2);
   border-radius: 20px;
@@ -341,11 +356,11 @@ button {
 [type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
           appearance: none;
-  height: 26px;
-  width: 26px;
+  height: calc(var(--size_h2) + 10px);
+  width: calc(var(--size_h2) + 10px);
   margin-top: -5px;
   background: var(--raspberry);
-  border: 4px solid var(--white_1);
+  border: 5px solid var(--white_1);
   border-radius: 50%;
   -webkit-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
           box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
@@ -371,8 +386,8 @@ button {
   position: absolute;
   left: 0;
   top: 0;
-  height: 16px;
-  width: 16px;
+  height: var(--size_h2);
+  width: var(--size_h2);
   background-color: var(--white_1);
   border: 2px solid var(--gray_2);
   border-radius: 50%;
@@ -382,10 +397,10 @@ button {
 [type=radio]:not(:checked) + label:after {
   content: "";
   position: absolute;
-  top: 4px;
-  left: 4px;
-  height: 8px;
-  width: 8px;
+  top: calc(var(--size_h3) / 2);
+  left: calc(var(--size_h3) / 2);
+  height: var(--size_h3);
+  width: var(--size_h3);
   background-color: var(--white_1);
   border-radius: 50%;
 }
@@ -422,13 +437,13 @@ button {
       flex-wrap: wrap;
 }
 .calculator .input_with_hint {
-  width: 105px;
-  margin: var(--gap) 0 0;
+  width: var(--size_w12);
+  margin: var(--gap-xxsmall) 0 0;
 }
 .calculator #areaRange {
-  max-width: 668px;
-  margin: calc(var(--gap) / 2) 0 0;
+  max-width: var(--size_w2);
+  margin: var(--gap-xxsmall) 0 0;
 }
 .calculator #calcResult {
-  margin: var(--gap) 0 0;
+  margin: var(--gap-large) 0 0;
 }
