--- a/style.css
+++ b/style.css
@@ -80,7 +80,11 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: inherit;
 }
 
+/* root */
 :root {
+  --max-width_d: 1000px;
+  --width_cont: calc(var(--max-width_d) - (var(--gap-large) + var(--gap-xlarge)) * 2);
+  --column_num: 8;
   --gap-small: 4px;
   --gap-xsmall: 8px;
   --gap-xxsmall: 16px;
@@ -90,9 +94,6 @@ h1, h2, h3, h4, h5, h6 {
   --size_h: 48px;
   --size_h2: 16px;
   --size_h3: calc(var(--size_h2) / 2);
-  --max-width_d: 1000px;
-  --width_cont: calc(var(--max-width_d) - (var(--gap-large) + var(--gap-xlarge)) * 2);
-  --column_num: 8;
   --span-1: calc(((100 / var(--column_num)) / 100) * var(--width_cont));
   --span-2: calc(var(--span-1) * 2);
   --span-3: calc(var(--span-1) * 3);
@@ -101,22 +102,46 @@ h1, h2, h3, h4, h5, h6 {
   --span-6: calc(var(--span-1) * 6);
   --span-7: calc(var(--span-1) * 7);
   --span-8: calc(var(--span-1) * 8);
-  --white_1: #ffffff;
-  --blockBack: #f6f8fb;
-  --blockBack_2: #f1f5f9;
-  --gray_1: #b3bcc5;
-  --gray_2: #e0e6ef;
-  --blue_1: #005bff;
-  --raspberry: #f91155;
+  --fz14: 14px;
+  --fz16: 16px;
+  --fz20: 20px;
+  --fz32: 32px;
+  --fw100: 100;
+  --fw300: 300;
+  --fw400: 400;
+  --fw500: 500;
+  --fw700: 700;
+  --fw900: 900;
+  --lh20: 20px;
+  --lh24: 24px;
+  --lh36: 36px;
+  --ls02: .2px;
+  --ls04: .4px;
+  --page-primary: #f6f8fb;
+  --page-secondary: #ffffff;
+  --page-accent: #f91155;
+  --el-primary: #f1f5f9;
+  --el-secondary: #b3bcc5;
+  --el-secondary-opacity: #e0e6ef;
+  --el-accent: #005bff;
+  --el-accent-opacity: #54c1ff;
+  --font-light: #ffffff;
+  --font-dark: #001a34;
+  --bd: 2px solid;
+  --br2: 2px;
+  --br4: 4px;
+  --br20: 20px;
+  --br50p: 50%;
 }
 
+/* fonts */
 body {
-  color: #001a34;
+  color: var(--font-dark);
   font-family: "GTEestiPro", sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 20px;
-  letter-spacing: 0.2px;
+  font-size: var(--fz16);
+  font-weight: var(--fw400);
+  line-height: var(--lh20);
+  letter-spacing: var(--ls02);
 }
 
 @font-face {
@@ -162,17 +187,18 @@ body {
   src: url(fonts/900gteestiprodisplay.otf) format("opentype");
 }
 .calculator #calcResult {
-  font-weight: 700;
+  font-weight: var(--fw700);
 }
 
 .features ul li > div > p, .input_with_hint, [type=text], [type=tel], [type=password], [type=email], [type=number], form select, .calculator #calcResult {
-  font-size: 20px;
-  line-height: 24px;
-  letter-spacing: 0.4px;
+  font-size: var(--fz20);
+  line-height: var(--lh24);
+  letter-spacing: var(--ls04);
 }
 
+/* page settings */
 html, body {
-  background: var(--blockBack);
+  background: var(--page-primary);
 }
 
 body {
@@ -197,7 +223,7 @@ body {
   width: 8px;
   height: 8px;
 }
-@media (max-width: calc(var(--max-width_m))) {
+@media (max-width: 768px) {
   ::-webkit-scrollbar {
     width: 0;
     height: 0;
@@ -206,17 +232,17 @@ body {
 
 ::-webkit-scrollbar-track,
 ::-webkit-scrollbar-corner {
-  background-color: rgba(30, 30, 30, 0);
+  background: rgba(30, 30, 30, 0);
 }
 
 ::-webkit-scrollbar-thumb,
 ::-webkit-resizer {
-  border-radius: 2px;
-  background-color: rgba(242, 228, 211, 0.5);
+  border-radius: var(--br2);
+  background: var(--el-secondary-opacity);
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(242, 228, 211, 0.4);
+  background: var(--el-secondary);
 }
 
 .content {
@@ -225,18 +251,7 @@ body {
           flex: 1 1 auto;
 }
 
-.row {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: var(--gap-xsmall);
-}
-
-[type=text], [type=tel], [type=password], [type=email], [type=number], form select {
-  border: 2px solid var(--gray_1);
-  border-radius: 4px;
-}
-
+/* elements */
 main {
   max-width: var(--max-width_d);
   margin: 0 auto;
@@ -245,8 +260,8 @@ main {
 main > article {
   margin: var(--gap-xxlarge) 0 0;
   padding: var(--gap-large);
-  background: var(--white_1);
-  border-radius: 4px;
+  background: var(--page-secondary);
+  border-radius: var(--br4);
 }
 @media (max-width: 768px) {
   main {
@@ -258,10 +273,10 @@ main > article {
 }
 
 h2 {
-  font-size: 32px;
-  font-weight: 700;
-  line-height: 36px;
-  letter-spacing: 0.4px;
+  font-size: var(--fz32);
+  font-weight: var(--fw700);
+  line-height: var(--lh36);
+  letter-spacing: var(--ls04);
   margin: 0 0 var(--gap-xlarge);
 }
 
@@ -277,31 +292,38 @@ form li:last-child {
 form select {
   height: var(--size_h);
   text-align: center;
+  border: var(--bd);
+  border-color: var(--el-secondary);
+  border-radius: var(--br4);
 }
 
 button {
   width: var(--span-2);
   height: var(--size_h);
-  background: var(--blue_1);
-  border-radius: 2px;
-  color: var(--white_1);
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 26px;
+  background: var(--el-accent);
+  border-radius: var(--br2);
+  color: var(--font-light);
+  font-size: var(--fz16);
+  font-weight: var(--fw500);
+  line-height: var(--lh24);
+  letter-spacing: var(--ls02);
 }
 
 [type=text], [type=tel], [type=password], [type=email], [type=number] {
   padding: 0 18px 0;
   width: 100%;
   height: var(--size_h);
+  border: var(--bd);
+  border-color: var(--el-secondary);
+  border-radius: var(--br4);
 }
 [type=text]::-webkit-input-placeholder, [type=tel]::-webkit-input-placeholder, [type=password]::-webkit-input-placeholder, [type=email]::-webkit-input-placeholder, [type=number]::-webkit-input-placeholder {
-  color: var(--gray_1);
-  font-weight: 400;
+  color: var(--el-secondary);
+  font-weight: var(--fw400);
 }
 [type=text]:-moz-placeholder, [type=tel]:-moz-placeholder, [type=password]:-moz-placeholder, [type=email]:-moz-placeholder, [type=number]:-moz-placeholder {
-  color: var(--gray_1);
-  font-weight: 400;
+  color: var(--el-secondary);
+  font-weight: var(--fw400);
 }
 
 .input_with_hint {
@@ -324,8 +346,8 @@ button {
   left: 11px;
   -webkit-transition: all 0.2s cubic-bezier(0.25, 0.8, 0.25, 1);
   transition: all 0.2s cubic-bezier(0.25, 0.8, 0.25, 1);
-  color: var(--gray_1);
-  font-weight: 400;
+  color: var(--el-secondary);
+  font-weight: var(--fw400);
 }
 
 [type=range] {
@@ -335,7 +357,7 @@ button {
   height: var(--size_h2);
   width: 100%;
   border: none;
-  border-radius: 20px;
+  border-radius: var(--br20);
   cursor: pointer;
   --range: calc(var(--max) - var(--min));
   --ratio: calc((var(--value) - var(--min)) / var(--range));
@@ -346,8 +368,8 @@ button {
 }
 [type=range]::-webkit-slider-runnable-track {
   height: var(--size_h2);
-  background: -webkit-gradient(linear, left top, left bottom, from(var(--blue_1)), to(var(--blue_1))) 0/var(--sx) 100% no-repeat, var(--gray_2);
-  background: linear-gradient(var(--blue_1), var(--blue_1)) 0/var(--sx) 100% no-repeat, var(--gray_2);
+  background: -webkit-gradient(linear, left top, left bottom, from(var(--el-accent)), to(var(--el-accent))) 0/var(--sx) 100% no-repeat, var(--el-secondary-opacity);
+  background: linear-gradient(var(--el-accent), var(--el-accent)) 0/var(--sx) 100% no-repeat, var(--el-secondary-opacity);
   border-radius: 20px;
   -webkit-box-shadow: none;
           box-shadow: none;
@@ -358,9 +380,9 @@ button {
   height: calc(var(--size_h2) + 10px);
   width: calc(var(--size_h2) + 10px);
   margin-top: -5px;
-  background: var(--raspberry);
-  border: 5px solid var(--white_1);
-  border-radius: 50%;
+  background: var(--page-accent);
+  border: 5px solid var(--page-secondary);
+  border-radius: var(--br50p);
   -webkit-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
           box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
   cursor: move;
@@ -393,9 +415,10 @@ button {
   top: 0;
   height: var(--size_h2);
   width: var(--size_h2);
-  background-color: var(--white_1);
-  border: 2px solid var(--gray_2);
-  border-radius: 50%;
+  background: var(--page-secondary);
+  border: var(--bd);
+  border-color: var(--el-secondary-opacity);
+  border-radius: var(--br50p);
 }
 
 [type=radio]:checked + label:after,
@@ -406,17 +429,17 @@ button {
   left: calc(var(--size_h3) / 2);
   height: var(--size_h3);
   width: var(--size_h3);
-  background-color: var(--white_1);
-  border-radius: 50%;
+  background: var(--page-secondary);
+  border-radius: var(--br50p);
 }
 
 [type=radio]:checked + label:before {
-  background-color: var(--blue_1);
-  border-color: var(--blue_1);
+  background: var(--el-accent);
+  border-color: var(--el-accent);
 }
 
 [type=radio]:checked + label:after {
-  background-color: var(--white_1);
+  background: var(--page-secondary);
 }
 
 [type=radio]:not(:checked):hover + label:before {
@@ -424,19 +447,59 @@ button {
 }
 
 [type=radio]:not(:checked):hover + label:after {
-  background-color: #99bdff;
+  background: #99bdff;
 }
 
 [type=radio]:checked:hover + label:before {
-  background-color: #0050e0;
+  background: #0050e0;
   border-color: #0050e0;
+}
+
+.row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: var(--gap-xsmall);
 }
 
 .hero {
   padding: 24px;
-  background: linear-gradient(139deg, var(--blue_1) 0.14%, #54C1FF 100%);
+  background: linear-gradient(139deg, var(--el-accent) 0.14%, var(--el-accent-opacity) 100%);
 }
 
+.roadmap h2 {
+  text-align: center;
+}
+.roadmap #slider {
+  --column: 3;
+  --gap: var(--gap-xxlarge);
+  --size: calc((var(--width_cont) - var(--gap) * (var(--column) - 1)) / var(--column));
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: var(--gap);
+  margin: 0 auto;
+  padding-bottom: calc(var(--gap) / 2);
+  overflow-x: auto;
+  -ms-scroll-snap-type: inline mandatory;
+      scroll-snap-type: inline mandatory;
+  scroll-snap-stop: always;
+}
+@media (max-width: 768px) {
+  .roadmap #slider {
+    width: var(--size);
+  }
+}
+.roadmap #slider::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+.roadmap #slider > li {
+  scroll-snap-align: center;
+  min-width: var(--size);
+  text-align: center;
+}
 .features ul {
   padding: 0 0 var(--gap-xsmall);
   display: -ms-grid;
@@ -449,8 +512,8 @@ button {
   position: relative;
   overflow: hidden;
   line-height: 0;
-  background: var(--blockBack_2);
-  border-radius: 2px;
+  background: var(--el-primary);
+  border-radius: var(--br2);
 }
 .features ul li::before {
   content: "";
@@ -476,7 +539,7 @@ button {
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-area: 1/1/2/3;
-  font-weight: 500;
+  font-weight: var(--fw500);
 }
 .features ul li > div > figure {
   -ms-grid-row: 2;
